RESOLVED FIXED139252
TextIndicator::createWithSelectionInFrame does synchronous IPC in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=139252
Summary TextIndicator::createWithSelectionInFrame does synchronous IPC in WebKit2
Tim Horton
Reported 2014-12-04 00:55:15 PST
TextIndicator::createWithSelectionInFrame does synchronous IPC in WebKit2
Attachments
Patch (17.14 KB, patch)
2014-12-04 00:56 PST, Tim Horton
andersca: review+
Tim Horton
Comment 1 2014-12-04 00:56:22 PST
Radar WebKit Bug Importer
Comment 2 2014-12-04 00:57:04 PST
WebKit Commit Bot
Comment 3 2014-12-04 00:57:51 PST
Attachment 242556 [details] did not pass style-queue: ERROR: Source/WebCore/page/mac/TextIndicatorWindow.mm:269: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/page/mac/TextIndicatorWindow.h:51: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 2 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 4 2014-12-04 11:58:08 PST
Tim Horton
Comment 5 2014-12-04 13:10:49 PST
Tim Horton
Comment 6 2014-12-04 13:32:10 PST
Note You need to log in before you can comment on or make changes to this bug.